[package]
name = "cube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
surrealdb = { version = "1.2.0", features = ["kv-mem"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "cube"
path = "cube.rs"
